After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693013 - Doesn't respond to ESC E at bottom of screen
Doesn't respond to ESC E at bottom of screen
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: vte-0-36
Assigned To: VTE Maintainers
VTE Maintainers
[fixed-0-36][needed-next][commit:b04c...
: 659521 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-02-01 14:55 UTC by Geoff Streeter
Modified: 2014-04-12 15:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Just a file which you can cat to illustrate the problem (26.00 KB, application/octet-stream)
2013-02-01 14:55 UTC, Geoff Streeter
  Details
Fix (1.16 KB, patch)
2013-10-24 13:21 UTC, Egmont Koblinger
committed Details | Review

Description Geoff Streeter 2013-02-01 14:55:28 UTC
Created attachment 234989 [details]
Just a file which you can cat to illustrate the problem

When using ESC E to request a new line gnome-terminal works fine until it reaches the bottom of the screen. At that point it fails to scroll.

Xterm scrolls. Konsole scrolls. PuTTy scrolls. Just cat the attached file.
Comment 1 Egmont Koblinger 2013-10-24 09:13:32 UTC
Yup, confirmed. I'll take a look.
Comment 2 Egmont Koblinger 2013-10-24 13:21:22 UTC
Created attachment 258019 [details] [review]
Fix
Comment 3 Christian Persch 2013-11-18 19:42:29 UTC
Fixed on vte-0-36.
Comment 4 Christian Persch 2014-04-12 15:37:09 UTC
*** Bug 659521 has been marked as a duplicate of this bug. ***