emulation: Fix ESC E at the bottom of the screen

ESC E needs to scroll, if necessary.

https://bugzilla.gnome.org/show_bug.cgi?id=693013